# GenesisMVP

./: .gitignore  README.md  bootstrap_media.py  pyproject.toml
docs/: mvp-overview.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_scene_preview_metadata.py
scripts/: print_pipeline_state.py
src/genesis/: __init__.py  config.py  logging.py
src/genesis/api/: app.py  deps.py
src/genesis/api/routes/: __init__.py  artifacts.py  projects.py  runs.py  uploads.py
src/genesis/cli/: __init__.py  process_project.py
src/genesis/db/: base.py  deps.py  session.py
src/genesis/ml/: __init__.py  captioner.py  whisper.py
src/genesis/models/: __init__.py  artifact.py  chapter.py  chapter_scene.py  media_file.py  mixins.py  project.py  run.py  scene.py  transcript.py
src/genesis/orchestration/: __init__.py  workflow.py
src/genesis/schemas/: artifact.py  media_file.py  project.py  run.py  upload.py
src/genesis/services/: __init__.py  artifacts.py  assembly.py  base.py  chapters.py  narration.py  pipeline.py  projects.py  runs.py  scene_detection.py  transcription.py  uploads.py
src/genesis/utils/: __init__.py  ffmpeg.py
