[tool.poetry]
name = "genesis-mvp"
version = "0.1.0"
description = "Genesis MVP backend pipeline for auto clip, transcribe, and assemble videos."
authors = ["Genesis Team <team@example.com>"]
packages = [{ include = "genesis", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
faster-whisper = "^1.0.1"
scenedetect = "^0.6.2"
opencv-python-headless = "^4.9.0.80"
transformers = "^4.41.0"
accelerate = "^0.30.0"
pillow = "^10.3.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
huggingface-hub = "^0.23.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
structlog = "^24.1.0"
tenacity = "^8.3.0"
fastapi-pagination = "^0.12.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.1"
black = "^24.4.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
